fixing bug in navbar on mobile devices, changing the design of contact form

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,9 @@ body {
   #header-items-container > .header-item > a {
     font-size: 15px !important;
   }
+  #header-items-container > .header-item > i {
+    font-size: 15px !important;
+  }
   .navbar-brand {
     font-size: 20px;
   }
@@ -63,12 +66,29 @@ body {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
 }
 
+.header-item {
+  text-align: center;
+}
+
+.header-item > i {
+  color: #cccaca;
+}
+
 #header-items-container > .header-item > a {
   color: #cccaca;
   font-size: 20px;
 }
 
 #header-items-container.fixed-theme > .header-item > a {
+  color: #f05f40;
+  font-size: 18px;
+}
+
+.nav-link {
+  padding-top: 0px !important;
+}
+
+#header-items-container.fixed-theme > .header-item > i {
   color: #f05f40;
   font-size: 18px;
 }
@@ -561,39 +581,23 @@ img {
 
 /* Contact Form */
 .td-form {
-  color: #ffffff;
+  display: flex;
+  align-items: center;
+  color: #666666;
   min-height: 100vh;
   padding-top: 20px;
   margin: 1em auto 1em;
   margin: 0;
   font-family: Quicksand;
-  background: #7893b1; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #29323c,
-    #7893b1
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #29323c,
-    #7893b1
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-@media (max-width: 500px) {
-  .td-form {
-    min-height: 700px;
-  }
+  background: #878ec8; /* fallback for old browsers */
 }
 
 .td-form .row {
   margin: 0 auto;
-  /* background-image:url("../../assets/img/contact-bg.jpg");
-  background-size: cover;
-  background-repeat: none; */
 }
 
 .td-form-wrapper {
+  background: #fff;
   margin: 1em 0 1em;
   max-width: 600px;
   margin: 0 auto;
@@ -610,12 +614,11 @@ img {
 }
 
 .td-form .form-control {
-  background-color: rgba(252, 249, 249, 0);
+  background-color: #e6e6e6;
   border: none;
-  border-bottom: 1px solid #ffffff;
-  border-radius: 0;
-  color: rgb(255, 255, 255);
-  padding-left: 1.8em;
+  border-radius: 2px;
+  color: #666666;
+  padding-left: 2.2em;
 }
 
 .td-form .form-control:hover {
@@ -627,7 +630,7 @@ img {
   left: 1.5em;
   font-size: 17px;
   position: relative;
-  color: rgb(255, 255, 255);
+  color: #666666;
 }
 
 .td-form label {
@@ -639,9 +642,10 @@ img {
 }
 
 #btn-contact {
-  background-color: rgba(0, 0, 0, 0);
-  border-color: #ffffff;
-  color: rgb(245, 245, 245);
+  background-color: #f05f40;
+  border: none;
+  border-radius: 0px;
+  color: #ffffff;
   margin-top: 0;
 }
 
